feat: device aware settings
